Added JQuery, Ember, Handlebars, tested initial server

--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 	<title>Dracula's Blog</title>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+
+	<!-- Javascript -->
+	<script src="libs/jquery-1.11.1.js"></script>
+	<script src="libs/handlebars-v1.3.0.js"></script>
+	<script src="libs/ember.js"></script>
+	<script src="libs/ember-handlebars-loader-0.0.1.js"></script>
+
+	<!-- Blogger App -->
+	<script src="blogger.js"></script>
 </head>
 <body>
 
