first routers, handlebars files, and connecting it all

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 	<!-- Blogger App -->
 	<script src="blogger.js"></script>
+	<script src="router.js"></script>
+
+	<!-- Posts -->
+	<script>
+	EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact']);
+	</script>
 </head>
 <body>
 
