nested routes for contact

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 	<!-- Posts -->
 	<script>
-	EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact']);
+	EmberHandlebarsLoader.loadTemplates(
+		['posts', 'about', 'contact', 'phone', 'email']
+		);
 	</script>
 </head>
 <body>
