added application handlebar template

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Posts -->
 	<script>
 	EmberHandlebarsLoader.loadTemplates(
-		['posts', 'about', 'contact', 'phone', 'email']
+		['posts', 'about', 'contact', 'phone', 'email', 'application']
 		);
 	</script>
 </head>
