--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 	<script src="blogger.js"></script>
 	<script src="router.js"></script>
 
-	<!-- Posts -->
+	<!-- Controllers -->
+	<script src="controllers/about.js"></script>
+	<script src="controllers/contact.js"></script>
+
+	<!-- Templates -->
 	<script>
 	EmberHandlebarsLoader.loadTemplates(
 		['posts', 'about', 'contact', 'phone', 'email', 'application']
